minor updates to lab6

--- a/Labs/Lab06_GPS.ipynb
+++ b/Labs/Lab06_GPS.ipynb
@@ -32,6 +32,8 @@
         "\n",
         "We'll look at [global navigation satellite system (GNSS)](https://en.wikipedia.org/wiki/Satellite_navigation) (which includes GPS...)\n",
         "\n",
+        "**Note**: we recommend running this lab on colab, not locally, so that you don't have to spend time installing the `gnss_lib_py` package (which requires certain Python versions)\n",
+        "\n",
         "### Learning Objectives\n",
         "1. Hands on experience using Newton's method to solve a nonlinear system of equations\n",
         "2. Learn a little bit about how GPS works\n",
@@ -54,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -97,6 +99,8 @@
         "Below is a call signature for `my_Newton` which you will use later. So implement it, and then check on the provided test function that it's working.\n",
         "\n",
         "Note: in class we've always had # of equations = # of parameters so far. If we have more equations than parameters, then instead of solving $J^{-1} F(\\vec{x})$ (via, e.g., `np.linalg.solve`), you can get a least norm solution via $J^\\dagger F(\\vec{x})$ where $J^\\dagger = (J^\\top J)^{-1} J^\\top$ is the Moore-Penrose pseudoinverse. In numpy, you can get this solution `np.linalg.lstsq`.  This is equivalent to the \"Gauss Newton\" method we'll talk about later.\n",
+        "\n",
+        "(Note: if you use `np.linalg.lstsq`, it returns a tuple of values with information like residuals; you only want the first part of that tuple which is the part that contains the solution)\n",
         "\n",
         "I bring this up because when we use Newton's method in GNSS, if we have exactly 4 satellites, then we have the same number of equations as unknowns. But we often have data from more than 4 satellites, and it's a shame to waste that information, so we'll try to use it.  For nice GNSS implementations, you'd actually *weight* each equation by your estimate of the error, since you might have better data from some satellites."
       ],
@@ -150,11 +154,18 @@
       "cell_type": "code",
       "source": [
         "# Download all data\n",
+        "from urllib.request import urlretrieve\n",
         "for alph in ['A','B','C','D']:\n",
-        "    os.system(f'wget -q https://raw.githubusercontent.com/cu-applied-math/appm-4600-numerics/refs/heads/main/Labs/Data/gnss_log_{alph}.txt')\n",
+        "    file = f'gnss_log_{alph}.txt'\n",
+        "    url  = 'https://raw.githubusercontent.com/cu-applied-math/appm-4600-numerics/refs/heads/main/Labs/Data/' + file\n",
+        "    urlretrieve(url, file)\n",
+        "    # The command below works on colab and mac/linux and Windows with linux subsystem, but not on plain Windows\n",
+        "    #os.system(f'wget -q https://raw.githubusercontent.com/cu-applied-math/appm-4600-numerics/refs/heads/main/Labs/Data/gnss_log_{alph}.txt')\n",
         "for i in range(ord('E'),ord('A')+26, 2):\n",
         "    alph = chr(i) + chr(i+1)\n",
-        "    os.system(f'wget -q https://raw.githubusercontent.com/cu-applied-math/appm-4600-numerics/refs/heads/main/Labs/Data/gnss_log_{alph}.txt')"
+        "    file = f'gnss_log_{alph}.txt'\n",
+        "    url  = 'https://raw.githubusercontent.com/cu-applied-math/appm-4600-numerics/refs/heads/main/Labs/Data/' + file\n",
+        "    urlretrieve(url, file)"
       ],
       "metadata": {
         "id": "vroYL-ytsZjS"
@@ -163,10 +174,18 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Choose a log file to work with. We have a bunch of them but not all of them work. Set the `letter` variable below to one of `C`, `E`, `G` or `I`"
+      ],
+      "metadata": {
+        "id": "O8pT0aV1T2Fj"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# And you'll work with a specific file (it might not be the same as your friends')\n",
-        "letter = 'C'  # change this to the first letter of your last name.\n",
+        "letter = 'C'\n",
         "# Edit -- not all log files work.\n",
         "# Good: C, EF, GH, IJ.\n",
         "# Bad: A, B, D, KL, MN, OP, QR, ST, UV, WX, YZ\n",
@@ -424,6 +443,9 @@
         "\n",
         "    # and define Jacobian\n",
         "    def J( x_and_ct ):\n",
+        "        # Be careful with factors of 2\n",
+        "        # You could use JAX if you want to try that...\n",
+        "        # though it might be quicker to do it by hand\n",
         "        raise NotImplementedError(\"Implement me!\")\n",
         "\n",
         "    # Let's try our Newton method:\n",
@@ -599,12 +621,17 @@
         "        ct = x_and_ct[-1]  # speed-of-light x time, aka pseudorange\n",
         "        out = np.empty( (num_svs,1) ) # number of satellites\n",
         "        # Note: shape of (num_svs,) can lead to errors. Make it (num_svs,1)\n",
+        "        # The .ravel() just changes the shape of things, e.g., it converts\n",
+        "        #   (num_svs,1) into (num_svs,)\n",
         "        for sat in range(num_svs):\n",
         "            out[sat] = np.linalg.norm( x.ravel() - pos_sv_m[sat].ravel() )**2/2 - (ct - corr_pr_m[sat])**2/2\n",
         "        return out\n",
         "\n",
         "    # and define Jacobian\n",
         "    def J( x_and_ct ):\n",
+        "        # Be careful with factors of 2\n",
+        "        # You could use JAX if you want to try that...\n",
+        "        # though it might be quicker to do it by hand\n",
         "        raise NotImplementedError(\"Implement me!\")\n",
         "\n",
         "    # Let's try our Newton method:\n",
@@ -657,7 +684,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -708,7 +735,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
